--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    background-image: url(/images/Darkness.jpg);
+    background-image: url('/images/Darkness.jpg');
     background-position: center;
     background-size: cover;
     height: 400px;
@@ -51,7 +51,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image:url(/images/dont.jpg);
+    background-image:url('/images/dont.jpg');
     height: 400px;
     width: 50%;
     background-position: center;
@@ -62,7 +62,7 @@
      display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(/images/It.jpg);
+    background-image: url('/images/It.jpg');
     height: 400px;
     background-position: center;
     background-size: cover;
@@ -77,7 +77,7 @@
 display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(/images/Clean.jpg);
+    background-image: url('/images/Clean.jpg');
     height: 400px;
     background-position: center;
     background-size: cover;
@@ -85,7 +85,7 @@ display: flex;
     
 }
 .all-spikes {
-    background-image: url(/images/All.jpg);
+    background-image: url('/images/All.jpg');
     background-position: center;
     background-size: cover;
     height: 400px;
@@ -95,7 +95,7 @@ display: flex;
     display: flex;
 }
 .image6 {
-background-image: url(/images/Green.jpg);
+background-image: url('/images/Green.jpg');
 background-position: center;
 background-size: cover;
 height: 400px;
@@ -111,7 +111,7 @@ height: 400px;
  margin: 0 40px;  
 }
 .get-fruity{
-    background-image: url(/images/Get.jpg);
+    background-image: url('/images/Get.jpg');
     background-position: center;
     background-size: cover;
     height: 400px;
@@ -123,7 +123,7 @@ height: 400px;
 .fur-series{
     background-position: center;
     background-size: cover;
-    background-image: url(/images/dog.jpg);
+    background-image: url('/images/dog.jpg');
     align-items: center;
     justify-content: center;
     display: flex;
@@ -132,7 +132,7 @@ height: 400px;
 }
 .image9 {
 background-position: center; 
-background-image: url(/images/new.jpg);
+background-image: url('/images/new.jpg');
 background-size: cover;  
 align-items: center;
 justify-content: center;
@@ -148,7 +148,7 @@ margin-right: 40px;
 }
 .last {
     background-size: cover;
-    background-image: url(/images/free.jpg);
+    background-image: url('/images/free.jpg');
     background-position: center;
 align-items: center;
 display: flex;
@@ -158,7 +158,7 @@ width: 50%;
 
 }
 .hello {
-    background-image: url(/images/Hello.jpg);
+    background-image: url('/images/Hello.jpg');
     background-size: cover;
     background-position: center;
     align-items: center;
